# TFG

./: .gitignore  README.md  docker-info
anteproxecto/: descripcionOfertaCentro  proposta.md  provisional.md  provisional_0.1.md
lowLevelKick/: Dockerfile  buildDocker.sh  enterDocker.sh
lowLevelKick/devDir/get_state_debug/: CMakeLists.txt  package.xml
lowLevelKick/devDir/get_state_debug/include/: motor_crc.h
lowLevelKick/devDir/get_state_debug/src/: get_state_debug.cpp
lowLevelKick/devDir/get_state_debug_nodes/: CMakeLists.txt  cyclonedds.xml.old  package.xml  setup
lowLevelKick/devDir/get_state_debug_nodes/src/: high_level_controller.cpp  low_level_controller.cpp
lowLevelKick/devDir/get_state_example/: CMakeLists.txt  package.xml
lowLevelKick/devDir/get_state_example/include/: motor_crc.h
lowLevelKick/devDir/get_state_example/src/: get_state.cpp
lowLevelKick/devDir/go2/: scene.xml
lowLevelKick/devDir/lowKick/: .clangd
lowLevelKick/devDir/lowKick/src/: stand_go2.cpp
lowLevelKick/devDir/low_kick/: .clangd  CMakeLists.txt  compile_commands.json  package.xml
lowLevelKick/devDir/low_kick/src/: low_kick.cpp
lowLevelKick/devDir/src/: motor_crc.cpp
lowLevelKick/devDir/stand_example/: .clangd  compile_commands.json
lowLevelKick/dockerResources/: cyclonedds.xml
lowLevelKick/dockerResources/config/nvim/lua/plugins/: ros2.lua
lowLevelKick/dockerResources/scripts/: build.sh  new_run.sh  run.sh  sim.sh
lowLevelKick/scripts/: run.sh
mujocoDev/: buildDocker.sh  enterDocker.sh
mujocoDev/devDir/: CMakeLists.txt  compilate.sh  mujoco.sh
tfg-samuel/: Dockerfile  cyclonedds.xml  handy-commands  logIn.sh  my_robot_conf.rviz
tfg-samuel/src/go2_ros2_sdk/src/kick/: CMakeLists.txt  package.xml
tfg-samuel/src/go2_ros2_sdk/src/kick/launch/: start_kick.py
tfg-samuel/src/go2_ros2_sdk/src/kick/scripts/: kick.py
workingDir/: Dockerfile  config.sh  cyclonedds.xml  logIn.sh
workingDir/src/go2_ros2_sdk/src/ball_kicking/: CMakeLists.txt
workingDir/src/go2_ros2_sdk/src/yolo/yolobot_recognition/scripts/: .gitignore  targets.json  yolov8_ros2_pt.py
workingDir/src/go2_ros2_sdk/src/yolo/yolov8_msgs/msg/: InferenceResult.msg
