<?xml version="1.0"?>
<package format="3">
  <name>low_kick</name>
  <version>0.0.0</version>
  <description>First naive implementation of a kick</description>
  <maintainer email="mario.l.a3094@gmail.com">Choped7626</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>unitree_go</depend>
  <depend>unitree_api</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rosbag2_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
