<?xml version="1.0"?>
<package format="2">
  <name>kick</name>
  <version>0.0.1</version>
  <description>Patada al aire implementacion naive</description>
  
  <maintainer email="mario.l.a3094@gmail.com">Mario Lamas Angeriz</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencias de compilación -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencias de ejecución -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>yolov8_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_py</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Dependencias para pruebas -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
